--- a/templates/dashboard/lecturer_results.html
+++ b/templates/dashboard/lecturer_results.html
@@ -11,10 +11,10 @@
         <div class="form-head d-flex flex-wrap mb-sm-4 mb-3 align-items-center">
             <div class="me-auto d-lg-block mb-3">
                 <h2 class="text-black mb-0 font-w700">My Students Results</h2>
-                <p class="text-muted mb-0">
+                {% comment %} <p class="text-muted mb-0">
                     <i class="fas fa-chalkboard-teacher me-2"></i>
                     View results of students you have graded
-                </p>
+                </p> {% endcomment %}
             </div>
         </div>
 
@@ -305,10 +305,10 @@
                                 Please select <strong>Department</strong>, <strong>Level</strong> and <strong>Semester</strong> from the filters above to view student results.
                                 <br>You will see results for students in courses you have taught.
                             </p>
-                            <div class="alert alert-info border-0 d-inline-block">
+                            {% comment %} <div class="alert alert-info border-0 d-inline-block">
                                 <i class="fas fa-info-circle me-2"></i>
                                 <strong>Note:</strong> Only results of students you taught will be displayed.
-                            </div>
+                            </div> {% endcomment %}
                         </div>
                     {% endif %}
                 </div>
